syntax = "proto3";

package pb;

option go_package = "/pb";

enum EDbCommand {
    E_DB_COMMAND_UNSPECIFIED = 0;
    E_DB_COMMAND_PUSH_CHAT_LOG = 1001;                  // 推送聊天日志
    E_DB_COMMAND_PUSH_CHAT_RECORD = 1002;               // 推送客服对接记录

    E_DB_COMMAND_GET_CONFIG = 2001;                     // 获取配置
    E_DB_COMMAND_GET_CHAT_RECORD = 2002;                // 获取客服对接记录
    E_DB_COMMAND_GET_CHAT_LOG = 2003;                   // 获取日志记录
}

enum EDbChatType {
    E_DB_CHAT_TYPE_PLAYER = 0;                      // 玩家发言
    E_DB_CHAT_TYPE_SERVICE = 1;                     // 客服发言
}

enum EDbRecordState {
    E_DB_RECORD_STATE_REPLY = 0;
    E_DB_RECORD_STATE_DISCONNECT = 1;
}